fix prompt visibility

--- a/uplink-client/src/styles/globals.css
+++ b/uplink-client/src/styles/globals.css
@@ -67,7 +67,7 @@ ol {
 }
 
 .hyperlinks a {
-  @apply text-blue-500 hover:text-blue-600;
+  @apply text-blue-500 hover:text-blue-600 break-all;
 }
 
 .tooltip::before {
@@ -95,8 +95,16 @@ ol {
   grid-template-columns: repeat(auto-fill, minmax(275px, 2fr));
 }
 
+.homepage-sub-columns {
+  grid-template-columns: repeat(auto-fill, minmax(275px, 2fr));
+}
+
 .contest-columns {
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+}
+
+.testimonial-columns {
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 }
 
 .primary-btn {
@@ -106,7 +114,6 @@ ol {
 .secondary-btn {
   @apply btn btn-md normal-case btn-ghost w-fit bg-secondary bg-opacity-20 hover:bg-secondary text-secondary hover:text-black hover:rounded-xl rounded-3xl transition-all duration-300;
 }
-
 
 .glass,
 .glass:hover,
@@ -193,4 +200,12 @@ ol {
   100% {
     left: -30px;
   }
+}
+
+.expandable-text-container {
+  @apply bg-green-300 h-full max-h-[30vh]
+}
+
+.expand-text-btn-container {
+  @apply bg-red-300
 }
